# ResearchMind.AI

./: .gitignore  PROJECT_DOCUMENT.md  README.md
backend/: .env.example  .gitignore  alembic.ini  docker-compose.yml  pyproject.toml  scratch_writer_test.py
backend/alembic/: env.py
backend/alembic/versions/: 20260623_1535_11ada0afc8ed_initial_schema.py  20260623_1540_b3c4d5e6f7a8_update_embedding_dim.py
backend/app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py
backend/app/agents/: __init__.py  critic.py  graph.py  llm.py  planner.py  researcher.py  reviewer.py  writer.py
backend/app/api/: __init__.py  projects.py  reports.py  uploads.py  ws.py
backend/app/services/: __init__.py  pptx_generator.py
backend/scripts/: init_db.sql  test_app_db.py  test_db_connection.py  test_neon_connection.py
backend/tests/: __init__.py  conftest.py  test_agents.py
frontend/public/: test_ws.html
frontend/src/app/: globals.css  page.js  page.module.css
frontend/src/app/research/[id]/: page.js  page.module.css
