[build-system]
requires = ["setuptools>=40", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]     # only package the app/ directory; exclude alembic/

[project]
name = "researchmind-backend"
version = "0.1.0"
description = "ResearchMind AI – Autonomous Research Agent Backend"
requires-python = ">=3.11"

dependencies = [
  # ── Web Framework ────────────────────────────────────────────────
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "python-multipart>=0.0.9",          # file uploads

  # ── Database / ORM ───────────────────────────────────────────────
  "sqlalchemy>=2.0.30",
  "asyncpg>=0.29.0",                   # async PostgreSQL driver
  "alembic>=1.13.1",
  "pgvector>=0.2.5",                   # pgvector SQLAlchemy type

  # ── AI / LLM ─────────────────────────────────────────────────────
  "langchain>=0.2.0",
  "langchain-core>=0.2.0",
  "langchain-community>=0.2.0",
  "langgraph>=0.1.0",
  "langchain-groq>=0.1.0",           # Groq LLM provider (Llama 3 70B)
  "langchain-huggingface>=0.0.3",    # HuggingFace embeddings (free, local)
  "sentence-transformers>=2.7.0",    # Local embedding model runner

  # ── PDF Processing ───────────────────────────────────────────────
  "pypdf>=4.2.0",
  "pdfplumber>=0.11.0",

  # ── Search / Retrieval ───────────────────────────────────────────
  "tavily-python>=0.3.3",

  # ── Utilities ────────────────────────────────────────────────────
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.0",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.0",
  "tenacity>=8.3.0",                   # retry logic
  "python-pptx>=0.6.23",              # PPTX generation
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.6",
  "httpx>=0.27.0",
  "ruff>=0.4.4",
  "mypy>=1.10.0",
]
